# wasmup

./: .gitignore  CHANGELOG.md  README.md  cross-release.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.ts  wasmup.config.ts
.github/workflows/: ci.yml  release.yml
fixture/configs/: config.cjs  config.json  config.mjs  config.ts
fixture/hello_world/: Cargo.toml
fixture/hello_world/src/: lib.rs
fixture/less/: Cargo.toml
fixture/less/src/: lib.rs
fixture/more/: Cargo.toml
fixture/more/src/: lib.rs
fixture/workspace/: Cargo.toml
fixture/workspace/main/: Cargo.toml
src/: cargo.test.ts  cargo.ts  cli.ts  config.test.ts  config.ts  consts.ts  index.ts  types.ts
src/commands/: build.ts  info.ts  install.ts
src/prompts/: index.ts  prompt.ts  spinner.ts
src/types/: index.ts
src/util/: config.ts  env.test.ts  env.ts  fs.ts  github.ts  index.ts  log.ts  merge.test.ts  merge.ts  stringify.test.ts  stringify.ts
tests/: arg.test.ts  build.test.ts  cli.test.ts  github.test.ts  index.test.ts  stringify.test.ts  util.test.ts
tests/__util__/: index.html  index.js  index_node.js  index_sync.html  index_sync.js  server.js  shims.html  shims.js  shims_sync.html  shims_sync.js
tests/e2e/: build.test.ts  help.test.ts  node.test.ts  runtime.test.ts
