[package]
name = "main"
description = "A tiny, fast, and powerful Util"
keywords = ["util", "tiny"]

authors.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
